# eagv2

session1/dictionary/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
session10/: .gitignore  pyproject.toml
session10/s10share/: README.md
session10/s10share/agent/: agent_loop2.py
session10/s10share/config/: mcp_server_config.yaml
session4/mcp3/: mcp-server.py  talk2mcp.py
session5/: main.py  pyproject.toml
session5/assignment/: README.md  pyproject.toml  talk2mcp.py
session5/class/: pyproject.toml
session6/: main.py  pyproject.toml
session6/assignment/: .env  talk2mcp.py  talk2mcp2.py
session6/math-agent/: README.md  action.py  decision.py  main.py  mcp-server2.py  memory.py  perception.py  pyproject.toml
session7/: pyproject.toml
session7/embeddings/: embeddings.py  embeddings_compare_ollama.py  embeddings_ollama.py  pyproject.toml
session7/faiss/: faiss_medium.py  faiss_simple.py  pyproject.toml
session7/s7/: .gitignore  agent.py  decision.py  example3.py  memory.py  perception.py  pyproject.toml
session8/: pyproject.toml
session8/assignment/: .gitignore  agent.py  pyproject.toml
session8/assignment/telegram/: pyproject.toml  telegram_fetch.py
session8/s8/: .gitignore  agent.py  gmail_config.py  main.py  mcp_server_1.py  mcp_server_2.py  mcp_server_3.py  mcp_server_gmail.py  pyproject.toml  telegram.py
session8/s8/config/: profiles.yaml
session8/s8/modules/: memory.py  (+1 more)
session9/: .gitignore  main.py  pyproject.toml
session9/S9/: README.md  README2.md  README3.md
(+1 files in other folders)
