[project]
name = "math-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.46.0",
    "google-generativeai>=0.8.5",
    "load-dotenv>=0.1.0",
    "mcp[cli]>=1.20.0",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
]
